--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "firebase": "^10.11.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8"
   },
