--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.23.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.26.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8"
   },
